added picker view, text field and constraints

--- a/BSUIR Schedule/BSUIR Schedule/Base.lproj/Main.storyboard
+++ b/BSUIR Schedule/BSUIR Schedule/Base.lproj/Main.storyboard
@@ -191,13 +191,69 @@
                                     <outlet property="delegate" destination="MWn-nY-xY6" id="JFA-22-F8I"/>
                                 </connections>
                             </tableView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gkO-rC-PFD">
+                                <rect key="frame" x="0.0" y="88" width="414" height="170"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="6qi-rs-aXa"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="MWn-nY-xY6" id="NT9-yO-MQu"/>
+                                    <outlet property="delegate" destination="MWn-nY-xY6" id="cYW-17-SOj"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group Number" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCY-ee-naq">
+                                <rect key="frame" x="138" y="266" width="139" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="54g-0q-8Vt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZWv-N3-wlj">
+                                <rect key="frame" x="138" y="298" width="90" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="2XR-Ng-xlD"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="34" id="O76-VU-af0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="MWn-nY-xY6" id="ofS-6z-HyC"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RUN-i5-eev">
+                                <rect key="frame" x="236" y="298" width="32" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="eoG-VQ-lh7"/>
+                                </constraints>
+                                <state key="normal" image="arrow"/>
+                                <connections>
+                                    <segue destination="F7M-Gs-8RA" kind="unwind" unwindAction="unwindSegue:" id="Ouq-QV-448"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="xUe-gt-Wov" firstAttribute="leading" secondItem="0Of-0R-FMS" secondAttribute="leading" id="8xk-SX-kCC"/>
+                            <constraint firstItem="gkO-rC-PFD" firstAttribute="trailing" secondItem="0Of-0R-FMS" secondAttribute="trailing" id="Aky-R6-5ps"/>
+                            <constraint firstItem="ZWv-N3-wlj" firstAttribute="top" secondItem="FCY-ee-naq" secondAttribute="bottom" constant="8" id="BNI-mS-HZL"/>
+                            <constraint firstItem="FCY-ee-naq" firstAttribute="leading" secondItem="0Of-0R-FMS" secondAttribute="leading" constant="138" id="Deq-VX-lko"/>
                             <constraint firstItem="xUe-gt-Wov" firstAttribute="trailing" secondItem="0Of-0R-FMS" secondAttribute="trailing" id="GVc-PF-2cg"/>
+                            <constraint firstItem="gkO-rC-PFD" firstAttribute="top" secondItem="0Of-0R-FMS" secondAttribute="top" id="HUi-D9-QgX"/>
+                            <constraint firstItem="0Of-0R-FMS" firstAttribute="trailing" secondItem="FCY-ee-naq" secondAttribute="trailing" constant="137" id="Jl6-JQ-U4W"/>
+                            <constraint firstItem="ZWv-N3-wlj" firstAttribute="leading" secondItem="0Of-0R-FMS" secondAttribute="leading" constant="138" id="LS6-hD-nQD"/>
+                            <constraint firstItem="FCY-ee-naq" firstAttribute="top" secondItem="gkO-rC-PFD" secondAttribute="bottom" constant="8" id="NNu-FG-ngX"/>
                             <constraint firstItem="xUe-gt-Wov" firstAttribute="top" secondItem="0Of-0R-FMS" secondAttribute="top" constant="270" id="Odq-WC-hYq"/>
+                            <constraint firstItem="ZWv-N3-wlj" firstAttribute="top" secondItem="FCY-ee-naq" secondAttribute="bottom" constant="8" id="aYq-iJ-IMv"/>
+                            <constraint firstItem="gkO-rC-PFD" firstAttribute="leading" secondItem="0Of-0R-FMS" secondAttribute="leading" id="bWu-SN-Jzh"/>
+                            <constraint firstItem="RUN-i5-eev" firstAttribute="leading" secondItem="ZWv-N3-wlj" secondAttribute="trailing" constant="8" id="dvt-Nd-F1j"/>
+                            <constraint firstItem="RUN-i5-eev" firstAttribute="leading" secondItem="ZWv-N3-wlj" secondAttribute="trailing" constant="8" id="gEG-fA-Kuv"/>
+                            <constraint firstItem="RUN-i5-eev" firstAttribute="top" secondItem="FCY-ee-naq" secondAttribute="bottom" constant="8" id="mLO-Z2-ake"/>
                             <constraint firstAttribute="bottom" secondItem="xUe-gt-Wov" secondAttribute="bottom" id="sL0-nL-2Lj"/>
+                            <constraint firstItem="ZWv-N3-wlj" firstAttribute="leading" secondItem="0Of-0R-FMS" secondAttribute="leading" constant="138" id="sZ1-V2-Evp"/>
+                            <constraint firstItem="0Of-0R-FMS" firstAttribute="trailing" secondItem="RUN-i5-eev" secondAttribute="trailing" constant="146" id="x2B-Sm-19N"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZWv-N3-wlj" secondAttribute="trailing" constant="166" id="yEe-QR-JCe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0Of-0R-FMS"/>
                     </view>
@@ -205,13 +261,19 @@
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="fyR-C5-Pzg">
                             <connections>
                                 <action selector="cancelAction:" destination="MWn-nY-xY6" id="hCT-23-S1w"/>
+                                <segue destination="F7M-Gs-8RA" kind="unwind" unwindAction="unwindSegue:" id="1Jd-kw-Bp5"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="groupNumberTextField" destination="ZWv-N3-wlj" id="mmN-dE-mhq"/>
+                        <outlet property="groupNumbersPickerView" destination="gkO-rC-PFD" id="7qG-vB-nNN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HEb-4z-L4q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="F7M-Gs-8RA" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2125" y="132"/>
+            <point key="canvasLocation" x="2124.6376811594205" y="131.91964285714286"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RlK-x2-USy">
@@ -258,6 +320,7 @@
         <segue reference="Zlq-ac-hy7"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="arrow" width="320" height="307.5"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="silhouette" width="153.5" height="167"/>
     </resources>
